--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "timestamp.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node timestamp.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,8 @@
   "author": "Jake Nelson",
   "license": "ISC",
   "dependencies": {
-	"express": "4.14.0"
+	"express": "~4.14.0",
+	"ejs": "~1.0.0"
     },
   "bugs": {
     "url": "https://github.com/jnelson180/timestamp-api/issues"
